WIP: need to fix order of middle content on mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -183,10 +183,23 @@ header {
   padding-top: 25px;
   padding-bottom: 25px;
 }
+@media (max-width: 500px) {
+  header {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 header nav {
   width: 40%;
   display: flex;
   justify-content: space-around;
+}
+@media (max-width: 500px) {
+  header nav {
+    width: 100%;
+    align-items: space-around;
+  }
 }
 header nav a {
   text-decoration: none;
@@ -210,13 +223,29 @@ header nav a {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    width: 100%;
+    flex-direction: column;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -237,6 +266,11 @@ header nav a {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -246,20 +280,32 @@ header nav a {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
-.container-header {
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 66%;
+  }
+}
+.container-top {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
   border-bottom: 2px dashed #C0C0C0;
 }
-.container-header h2 {
+.container-top h2 {
   padding-top: 25px;
 }
-.container-header p {
+.container-top p {
   padding-bottom: 25px;
 }
 .btn {
