--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,10 +8,23 @@ header {
     padding-top: 25px;
     padding-bottom: 25px;
 
+    @media @mobile {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+      }
+
+   
+
     nav {
         width: 40%;
         display: flex;
         justify-content: space-around;
+
+        @media @mobile {
+            width: 100%;
+            align-items: space-around;
+          }
 
         a {
             text-decoration: none;
